# SmookingDetection

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
.dvc/: config
.dvc/tmp/: lock
checkpoints/: class_to_name.json
config/: config.yaml
config/data/: default.yaml
config/model/: conv_net.yaml  vit_model.yaml
config/optimizer/: adamw.yaml
config/trainer/: default.yaml
outputs/2025-12-30/21-24-14/.hydra/: hydra.yaml
outputs/2025-12-30/21-26-22/.hydra/: hydra.yaml
outputs/2025-12-30/21-30-00/.hydra/: hydra.yaml
outputs/2025-12-30/21-36-33/.hydra/: hydra.yaml
outputs/2025-12-30/21-47-05/.hydra/: config.yaml  hydra.yaml
plots/csv_logs/version_1/: hparams.yaml  metrics.csv
plots/tb_logs/version_0/: events.out.tfevents.1767119405.TESSERACT.27984.0
plots/tb_logs/version_1/: events.out.tfevents.1767119803.TESSERACT.41836.0  events.out.tfevents.1767120062.TESSERACT.41836.1
smooking_detection/: dataset.py  infer.py  model.py  train.py  utils.py
smooking_detection/models/: conv_net.py  vit_model.py
triton/: Dockerfile  docker-compose.yml  test.ipynb
triton/model_repository/image_preprocessor/: config.pbtxt  requirements.txt
triton/model_repository/image_preprocessor/1/: model.py
triton/model_repository/trt/: config.pbtxt
